--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "serve": "webpack serve"
+  },
   "devDependencies": {
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "senza-sdk": "^3.20.6",
+    "senza-sdk": "^4.0.2",
     "shaka-player": "^3.2.9"
   }
 }
